--- a/_parent/pom.xml
+++ b/_parent/pom.xml
@@ -14,6 +14,8 @@
   <packaging>pom</packaging>
 
   <name>DenktMit :: Wicket :: Parent</name>
+  <!--suppress MavenRedundantGroupId https://codeberg.org/forgejo/forgejo/pulls/6329 waiting for release 10 -->
+  <groupId>de.loosetie.crudular</groupId>
 
   <modules>
     <module>../components</module>
