--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -13,6 +13,8 @@
   <artifactId>dm-wicket-spring</artifactId>
 
   <name>DenktMit :: Wicket :: Spring</name>
+  <!--suppress MavenRedundantGroupId https://codeberg.org/forgejo/forgejo/pulls/6329 waiting for release 10 -->
+  <groupId>de.loosetie.crudular</groupId>
 
   <dependencies>
     <dependency>
