fix: copy pasta issue

--- a/components/pom.xml
+++ b/components/pom.xml
@@ -12,7 +12,7 @@
   </parent>
   <artifactId>dm-wicket-components</artifactId>
   <!--suppress MavenRedundantGroupId https://codeberg.org/forgejo/forgejo/pulls/6329 waiting for release 10 -->
-  <groupId>de.loosetie.crudular</groupId>
+  <groupId>de.denktmit.wicket</groupId>
 
   <name>DenktMit :: Wicket :: Components</name>
 
