--- a/model/pom.xml
+++ b/model/pom.xml
@@ -14,7 +14,7 @@
 
   <name>DenktMit :: Wicket :: Model</name>
   <!--suppress MavenRedundantGroupId https://codeberg.org/forgejo/forgejo/pulls/6329 waiting for release 10 -->
-  <groupId>de.loosetie.crudular</groupId>
+  <groupId>de.denktmit.wicket</groupId>
 
   <dependencies>
     <dependency>
