--- a/_bom/pom.xml
+++ b/_bom/pom.xml
@@ -15,7 +15,7 @@
 
   <name>DenktMit :: Wicket :: BOM</name>
   <!--suppress MavenRedundantGroupId https://codeberg.org/forgejo/forgejo/pulls/6329 waiting for release 10 -->
-  <groupId>de.loosetie.crudular</groupId>
+  <groupId>de.denktmit.wicket</groupId>
 
   <dependencyManagement>
     <dependencies>
