--- a/_parent/pom.xml
+++ b/_parent/pom.xml
@@ -20,14 +20,15 @@
     <java.version>21</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
-    <maven.javadoc.skip>true</maven.javadoc.skip>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <targetJdk>${java.version}</targetJdk>
     <version.com.github.ekryd.sortpom.sortpom-maven-plugin>4.0.0</version.com.github.ekryd.sortpom.sortpom-maven-plugin>
     <version.io.mockk.mockk-jvm>1.14.5</version.io.mockk.mockk-jvm>
     <version.kotlin>2.2.0</version.kotlin>
+    <version.org.apache.maven.plugins.maven-source-plugin>3.3.1</version.org.apache.maven.plugins.maven-source-plugin>
     <version.org.apache.wicket>10.6.0</version.org.apache.wicket>
+    <version.org.jetbrains.dokka.dokka-maven-plugin>1.9.20</version.org.jetbrains.dokka.dokka-maven-plugin>
     <version.org.springframework.boot.spring-boot-dependencies>3.5.4</version.org.springframework.boot.spring-boot-dependencies>
   </properties>
   <dependencyManagement>
@@ -145,6 +146,43 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>${version.org.apache.maven.plugins.maven-source-plugin}</version>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <goals>
+                <goal>jar-no-fork</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.jetbrains.dokka</groupId>
+          <artifactId>dokka-maven-plugin</artifactId>
+          <version>${version.org.jetbrains.dokka.dokka-maven-plugin}</version>
+          <configuration>
+            <dokkaPlugins>
+              <plugin>
+                <groupId>org.jetbrains.dokka</groupId>
+                <artifactId>kotlin-as-java-plugin</artifactId>
+                <version>${version.org.jetbrains.dokka.dokka-maven-plugin}</version>
+              </plugin>
+            </dokkaPlugins>
+            <failOnWarning>false</failOnWarning>
+          </configuration>
+          <executions>
+            <execution>
+              <id>dokka-javadoc-jar</id>
+              <goals>
+                <goal>javadocJar</goal>
+              </goals>
+              <phase>package</phase>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -188,6 +226,14 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.jetbrains.dokka</groupId>
+        <artifactId>dokka-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
